# binary-phase-space-from-least-action

./: CITATION.cff  README.md
python/: pyproject.toml
python/notebooks/: render_eigen.py  render_harmonic.py  render_harmonic_cross_section.py
python/src/binary_phase_space/: __init__.py  cross_section.py  signed_tree.py  signed_tree_vec.py
python/src/binary_phase_space/figures/: _orbits.py  _partition.py  _portrait.py  grid.py  panels.py
