[project]
name = "binary_phase_space"
version = "0.1.0"
description = "Binary phase space from least action — signed Stern-Brocot partition of phase space."
authors = [{ name = "Brian S. Mulloy", email = "bmulloy@umich.edu" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "qutip>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binary_phase_space"]
